fix alignment of copywrite in footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ a{
 p{
   align-items: center;
 }
-  #copyright {
+  #copyright h4 {
   color: gray;
   text-align: right;
 }
